Fix lowercase address

--- a/dos33.html
+++ b/dos33.html
@@ -5734,7 +5734,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 366E:4C D2 26       111             JMP <a class='x' href='#ERROR'   >ERROR</a>       ;BACK TO ERROR HANDLER
                     112 ****************************
                     113 <a class='f' id='3671' name='BUMPER'   >BUMPER      </a>EQU *
-3671:Ad 5D 36       114             LDA <a class='v' href='#EOFFLAG' >EOFFLAG</a>     ;SHOULD WE?
+3671:AD 5D 36       114             LDA <a class='v' href='#EOFFLAG' >EOFFLAG</a>     ;SHOULD WE?
 3674:F0 08          115             BEQ <a class='v' href='#GOBACK'  >GOBACK</a>      ;=&gt; NO<hr class='page'>
 3676:EE BD 35       116             INC <a class="v" href="#CCBRRN">CCBRRN</a>      ;BUMP CCB RECORD NUMBER         ; === Page <a class="page" name="page10">10</a> ===
 3679:D0 03          117             BNE <a class='v' href='#GOBACK'  >GOBACK</a>
