--- a/dos33.html
+++ b/dos33.html
@@ -5820,7 +5820,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     193 *
                     194 * This routine converts all characters
                     195 * that are not between quotes to
-                    196 * upepr case and returns them to the
+                    196 * upper case and returns them to the
                     197 * input buffer ($200). This works with
                     198 * DOS, Integer &amp; Applesoft.
                     199 *
